# starflask-mini-apps

./: AXONIAC_AGENT_SEED.md  BLOG.md  DEVOPS.md  README.md
apps/swatch-swipe/: Dockerfile  README.md  seed.js
apps/swatch-swipe/backend/: .env.example  Cargo.toml
apps/swatch-swipe/backend/src/: handlers.rs  main.rs  models.rs  seed.rs  starflask.rs
apps/swatch-swipe/frontend/: package-lock.json  package.json
apps/swatch-swipe/frontend/src/: App.tsx  api.ts  types.ts
apps/swatch-swipe/frontend/src/components/: CollectionView.tsx  GeneratorView.tsx  PaletteCard.tsx
